# Resource-Management-System

./: .env.example  .gitignore  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.render  ProjectProgressManagementSystem.sln  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
backend/ProjectProgressManagementSystem/: Dockerfile  Program.cs  ProjectProgressManagementSystem.csproj  README.md  appsettings.json
backend/ProjectProgressManagementSystem/Configuration/: AppSettings.cs
backend/ProjectProgressManagementSystem/Controllers/: AuthController.cs  DashboardController.cs  HolidayController.cs  LeaveController.cs  LockControler.cs  LockController.cs  ProjectController.cs  SettingsController.cs  UserController.cs  WeekDataController.cs
backend/ProjectProgressManagementSystem/DataAccess/: ApplicationDbContext.cs
backend/ProjectProgressManagementSystem/Exceptions/: DomainInvariantException.cs  DuplicateEntityException.cs  LoginFailedException.cs  OperationNotSupportedException.cs  PasswordMismatchException.cs  RecordNotFoundException.cs
backend/ProjectProgressManagementSystem/Extensions/: EnumExtensions.cs  (+6 more)
backend/alembic/: env.py
backend/app/: main.py
backend/scripts/: export_openapi.py  mssql_ensure_db.sh  seed_demo.py
backend/tests/: conftest.py  test_access_control.py  test_auth.py  test_auth_security_fixes.py  test_delete_and_import.py  test_holidays_dashboard.py  test_mail.py  test_preferences.py  test_projects.py  test_security.py  test_users.py  test_weekdata_leaves.py
(+285 files in other folders)
