[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rms-api"
version = "1.0.0"
description = "Resource Management System API"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiomysql>=0.2",            # swap for asyncpg if using PostgreSQL
    "pyodbc>=5.1",              # SQL Server via ODBC
    "aioodbc>=0.5",             # async SQL Server
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",  # file uploads
    "openpyxl>=3.1",            # Excel import/export
    "structlog>=24.1",
    "slowapi>=0.1",             # rate limiting
    "httpx>=0.27",              # for health checks / tests
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "aiosqlite>=0.20",           # in-memory SQLite for tests
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
